[gd_scene load_steps=6 format=3 uid="uid://idkdxkpdu4no"]

[ext_resource type="Script" uid="uid://c75onh481bgxf" path="res://scripts/huds/hud.gd" id="1_ahhtf"]
[ext_resource type="Theme" uid="uid://ck8mc8bdt2ucf" path="res://assets/game_theme.tres" id="2_5ysmq"]
[ext_resource type="Texture2D" uid="uid://hirprwvwbj00" path="res://assets/sailor.png" id="2_oo0fn"]
[ext_resource type="FontFile" uid="uid://cdjavsspjn18r" path="res://assets/fonts/Bungee-Regular.ttf" id="3_gpbci"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7rj4"]
bg_color = Color(0.6, 0.6, 0.6, 0.243137)

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_ahhtf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5ysmq")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64

[node name="HitCount" type="HBoxContainer" parent="Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="NumberLabel" type="Label" parent="Control/MarginContainer/HitCount"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_gpbci")
theme_override_font_sizes/font_size = 64
text = "100"
vertical_alignment = 1

[node name="TextLabel" type="Label" parent="Control/MarginContainer/HitCount"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_gpbci")
theme_override_font_sizes/font_size = 32
text = "Hits"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 88.0
grow_horizontal = 2

[node name="VSeparator" type="VSeparator" parent="Control/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="Control" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HighScoreLabel" type="Label" parent="Control/HBoxContainer/Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "HIGHSCORE: 000000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentScoreLabel" type="Label" parent="Control/HBoxContainer/Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -59.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 48
text = "Score: 000000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSplitContainer" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -88.0
offset_right = 81.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Control/HSplitContainer"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 88.0
texture = ExtResource("2_oo0fn")
stretch_mode = 3

[node name="CurrentSailorsLabel" type="Label" parent="Control/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 44.0
offset_right = 81.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("3_gpbci")
theme_override_font_sizes/font_size = 32
text = "0"
vertical_alignment = 1

[node name="DEBUGPanel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -181.0
offset_top = -110.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_e7rj4")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DEBUGPanel"]
layout_mode = 2

[node name="SpawnedEnemiesLabel" type="Label" parent="Control/DEBUGPanel/VBoxContainer"]
layout_mode = 2
text = "Spawned En:0"

[node name="DefeatedEnemiesLabel" type="Label" parent="Control/DEBUGPanel/VBoxContainer"]
layout_mode = 2
text = "Deafeted En:0"

[node name="DifficultyLabel" type="Label" parent="Control/DEBUGPanel/VBoxContainer"]
layout_mode = 2
text = "Difficulty:0"
